# python-project-50

./: .coverage  .gitignore  Makefile  README.md  coverage.xml  pyproject.toml
.github/workflows/: cc-reporter.yml  python-app.yml  python-ci.yml
gendiff/: cli.py  gendiff.py  parsing.py
gendiff/scripts/: gendiff.py
tests/: test_gendiff.py
tests/fixtures/yaml/: flat1_1.yml
